test/razor.test.views/errors/emptyPartial.jshtml
<div>
    <h1>Error-Index</h1>
    @Html.partial("")
</div>